[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/audio/ld49_carddeal.wav" type="AudioStream" id=1]
[ext_resource path="res://card/scenes/base_card.gd" type="Script" id=2]
[ext_resource path="res://common/label3D.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/audio/ld49_cardflip.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/ld49_cardlift.wav" type="AudioStream" id=5]
[ext_resource path="res://card/scenes/card_parts.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/textures/cardback_nature.png" type="Texture" id=8]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[node name="card" type="Spatial"]
script = ExtResource( 2 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 45, 73 )
own_world = true
transparent_bg = true

[node name="card_parts" parent="Viewport" instance=ExtResource( 6 )]
margin_right = 45.0
margin_bottom = 73.0

[node name="display" type="Spatial" parent="."]

[node name="front_mesh" type="Sprite3D" parent="display"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.001 )
cast_shadow = 0
generate_lightmap = false
flip_h = true
flip_v = true
alpha_cut = 2
texture = SubResource( 1 )

[node name="back_mesh" type="Sprite3D" parent="display"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.001 )
alpha_cut = 2
texture = ExtResource( 8 )

[node name="Area" type="Area" parent="display"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="display/Area"]
transform = Transform( 0.3, 0, 0, 0, 0.4, 0, 0, 0, 0.01, 0, 0, 0 )
shape = SubResource( 2 )

[node name="label3D" parent="display" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.506767, 0 )
visible = false

[node name="move_tween" type="Tween" parent="."]

[node name="look_tween" type="Tween" parent="."]

[node name="scale_tween" type="Tween" parent="."]

[node name="flip_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="hover_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="place_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[connection signal="input_event" from="display/Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="display/Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="display/Area" to="." method="_on_Area_mouse_exited"]
[connection signal="tween_all_completed" from="move_tween" to="." method="_on_move_tween_tween_all_completed"]
